--- a/examples/in-composition/composition.yml
+++ b/examples/in-composition/composition.yml
@@ -10,31 +10,31 @@ spec:
     apiVersion: releases.example.io/v1alpha1
     kind: XDemo
   resources:
-  - name: demo
-    base:
-      apiVersion: helm.crossplane.io/v1beta1
-      kind: Release
-      spec:
-        forProvider:
-          chart:
-            name: wordpress
-            repository: https://charts.bitnami.com/bitnami
-            version: 15.2.5
-          namespace: wordpress
-        providerConfigRef:
-          name: helm-provider
-    patches:
-      - fromFieldPath: spec.Namespace
-        toFieldPath: "spec.forProvider.namespace"
-      - type: ToCompositeFieldPath
-        fromFieldPath: status.atProvider.state
-        toFieldPath: status.helm.state
-        policy:
-          fromFieldPath: Optional
+  # - name: demo
+  #   base:
+  #     apiVersion: helm.crossplane.io/v1beta1
+  #     kind: Release
+  #     spec:
+  #       forProvider:
+  #         chart:
+  #           name: wordpress
+  #           repository: https://charts.bitnami.com/bitnami
+  #         namespace: wordpress
+  #         skipCreateNamespace: true
+  #   patches:
+  #     - fromFieldPath: spec.wordpressVersion
+  #       toFieldPath: spec.forProvider.chart.version
+  #     - type: ToCompositeFieldPath
+  #       fromFieldPath: status.atProvider.state
+  #       toFieldPath: status.helm.state
+  #       policy:
+  #         fromFieldPath: Optional
   - name: httprequestincompo
     base:
       apiVersion: http.crossplane.io/v1alpha1
-      kind: DesposibleRequest 
+      kind: DisposibleRequest 
+      metadata:
+        name: requet
       spec:
           deletionPolicy: Orphan
           forProvider:
@@ -51,9 +51,12 @@ spec:
           providerConfigRef:
             name: http-conf
           rollbackLimit: 2
-    patches:
-    # This ensures the request won't happen unless the helm chart is deployed.
-      - fromFieldPath: status.helm.state 
-        toFieldPath: spec.forProvider.state 
-        policy:
-          fromFieldPath: Required
+    # patches:
+    #   - type: ToCompositeFieldPath
+    #     fromFieldPath: status.response.body
+    #     toFieldPath: status.http.response.body
+    #     transforms:
+    #       - type: convert
+    #         convert:
+    #           toType: object
+    #           format: json
