--- a/package/crds/http.crossplane.io_disposiblerequests.yaml
+++ b/package/crds/http.crossplane.io_disposiblerequests.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.11.3
   creationTimestamp: null
-  name: desposiblerequests.http.crossplane.io
+  name: disposiblerequests.http.crossplane.io
 spec:
   group: http.crossplane.io
   names:
@@ -13,10 +13,10 @@ spec:
     - crossplane
     - managed
     - http
-    kind: DesposibleRequest
-    listKind: DesposibleRequestList
-    plural: desposiblerequests
-    singular: desposiblerequest
+    kind: DisposibleRequest
+    listKind: DisposibleRequestList
+    plural: disposiblerequests
+    singular: disposiblerequest
   scope: Cluster
   versions:
   - additionalPrinterColumns:
@@ -35,7 +35,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A DesposibleRequest is an example API type.
+        description: A DisposibleRequest is an example API type.
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -50,7 +50,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: A DesposibleRequestSpec defines the desired state of a DesposibleRequest.
+            description: A DisposibleRequestSpec defines the desired state of a DisposibleRequest.
             properties:
               deletionPolicy:
                 default: Delete
@@ -66,8 +66,8 @@ spec:
                 - Delete
                 type: string
               forProvider:
-                description: DesposibleRequestParameters are the configurable fields
-                  of a DesposibleRequest.
+                description: DisposibleRequestParameters are the configurable fields
+                  of a DisposibleRequest.
                 properties:
                   body:
                     type: string
@@ -302,8 +302,8 @@ spec:
             - forProvider
             type: object
           status:
-            description: A DesposibleRequestStatus represents the observed state of
-              a DesposibleRequest.
+            description: A DisposibleRequestStatus represents the observed state of
+              a DisposibleRequest.
             properties:
               conditions:
                 description: Conditions of the resource.
