--- a/examples/in-composition/composition.yml
+++ b/examples/in-composition/composition.yml
@@ -10,31 +10,28 @@ spec:
     apiVersion: releases.example.io/v1alpha1
     kind: XDemo
   resources:
-  # - name: demo
-  #   base:
-  #     apiVersion: helm.crossplane.io/v1beta1
-  #     kind: Release
-  #     spec:
-  #       forProvider:
-  #         chart:
-  #           name: wordpress
-  #           repository: https://charts.bitnami.com/bitnami
-  #         namespace: wordpress
-  #         skipCreateNamespace: true
-  #   patches:
-  #     - fromFieldPath: spec.wordpressVersion
-  #       toFieldPath: spec.forProvider.chart.version
-  #     - type: ToCompositeFieldPath
-  #       fromFieldPath: status.atProvider.state
-  #       toFieldPath: status.helm.state
-  #       policy:
-  #         fromFieldPath: Optional
-  - name: httprequestincompo
+  - name: demo
+    base:
+      apiVersion: helm.crossplane.io/v1beta1
+      kind: Release
+      spec:
+        forProvider:
+          chart:
+            name: wordpress
+            repository: https://charts.bitnami.com/bitnami
+          namespace: wordpress
+    patches:
+      - fromFieldPath: spec.wordpressVersion
+        toFieldPath: spec.forProvider.chart.version
+      - type: ToCompositeFieldPath
+        fromFieldPath: status.atProvider.state
+        toFieldPath: status.helm.state
+        policy:
+          fromFieldPath: Optional
+  - name: httprequest
     base:
       apiVersion: http.crossplane.io/v1alpha1
       kind: DisposibleRequest 
-      metadata:
-        name: requet
       spec:
           deletionPolicy: Orphan
           forProvider:
@@ -48,15 +45,13 @@ spec:
                 - Nice Header
                 - Value2
                 - Value3
-          providerConfigRef:
-            name: http-conf
           rollbackLimit: 2
-    # patches:
-    #   - type: ToCompositeFieldPath
-    #     fromFieldPath: status.response.body
-    #     toFieldPath: status.http.response.body
-    #     transforms:
-    #       - type: convert
-    #         convert:
-    #           toType: object
-    #           format: json
+    patches:
+      - type: ToCompositeFieldPath
+        fromFieldPath: status.response.body
+        toFieldPath: status.http.response.body
+        transforms:
+          - type: convert
+            convert:
+              toType: object
+              format: json
