--- a/examples/in-composition/composition.yml
+++ b/examples/in-composition/composition.yml
@@ -31,7 +31,7 @@ spec:
   - name: httprequest
     base:
       apiVersion: http.crossplane.io/v1alpha1
-      kind: DisposibleRequest 
+      kind: DisposableRequest 
       spec:
           deletionPolicy: Orphan
           forProvider:
