--- a/examples/provider/config.yaml
+++ b/examples/provider/config.yaml
@@ -1,7 +1,7 @@
 apiVersion: http.crossplane.io/v1alpha1
 kind: ProviderConfig
 metadata:
-  name: default
+  name: http-conf
 spec:
   credentials:
     source: InjectedIdentity
